crates/ruff_python_parser/src/semantic_errors/snapshots/ruff_python_parser__semantic_errors__tests__dictcomp_val.snap
---
source: crates/ruff_python_parser/src/semantic_errors/mod.rs
expression: test_snippet(contents)
---
[
    SemanticSyntaxError {
        kind: ReboundComprehensionVariable,
        range: 7..8,
        python_version: PythonVersion {
            major: 3,
            minor: 9,
        },
    },
]
